# PEtab_GUI

./: MANIFEST.in  README.md  app.py  pyproject.toml  utils.py
controllers/: logger_controller.py  mother_controller.py  sbml_controller.py  table_controllers.py
example/: problem.yaml
huiPESTO/PEtab_edit_gui/: C.py  penGUI_controller.py  penGUI_model.py  penGUI_view.py  sub_app.py  task_bar.py  utils.py
huiPESTO/PEtab_edit_gui/controllers/: sbml_controller.py  table_controllers.py
huiPESTO/PEtab_edit_gui/models/: pandas_table_model.py
huiPESTO/PEtab_edit_gui/views/: main_view.py  task_bar.py
models/: petab_model.py  sbml_model.py
src/petab_gui/: __main__.py  app.py
src/petab_gui/views/: main_view.py  measurement_plot.py  task_bar.py
views/: __init__.py  logger.py  main_view.py  table_view.py
