[project]
name = 'PEtab-GUI'
dynamic = ["version"]
readme = "README.md"

dependencies = [
    "wheel",
    "pyside6",
    "pandas",
    "tellurium",
    "python-libsbml",
    "matplotlib",
    "petab"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pyside6",
    "pandas",
    "tellurium",
    "python-libsbml",
    "matplotlib",
    "petab"
]

[project.urls]
Repository = "https://github.com/PaulJonasJost/pyPESTO_GUI"
Issues = "https://github.com/PaulJonasJost/pyPESTO_GUI/issues"

[project.gui-scripts]
PEtab_gui="petab_gui:main"

[project.scripts]
PEtab_gui_cli="petab_gui:main"
